# Raytracing

./: CMakeLists.txt  LICENSE  README.md
include/: colour.h  cube.h  gobject.h  headers.h  light.h  litscene.h  material.h  point.h  polygon.h  ray.h  scene.h  simplecamera.h  sphere.h  vector.h
src/: colour.cpp  cube.cpp  light.cpp  litscene.cpp  main.cpp  material.cpp  point.cpp  polygon.cpp  ray.cpp  scene.cpp  simplecamera.cpp  sphere.cpp  vector.cpp
